# xmr_pos

./: LICENSE  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/cl/icripto/xmrpos/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ed25519_jni.c
app/src/main/java/cl/icripto/xmrpos/: MainActivity.kt
app/src/main/java/cl/icripto/xmrpos/Base58/: Base58.kt
app/src/main/java/cl/icripto/xmrpos/data/: MoneroPriceDataSource.kt  SettingsRepository.kt
app/src/main/java/cl/icripto/xmrpos/monero/: MoneroAddress.kt  MoneroCrypto.kt  MoneroSubAddress.kt
app/src/main/java/cl/icripto/xmrpos/network/: MoneroRpc.kt  ServerChecker.kt
app/src/main/java/cl/icripto/xmrpos/ui/: PaymentScreen.kt  PinScreen.kt  PosScreen.kt  SettingsScreen.kt  UnlockScreen.kt
app/src/main/java/cl/icripto/xmrpos/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/cl/icripto/xmrpos/viewmodel/: SettingsViewModel.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/test/java/cl/icripto/xmrpos/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
